# fhir-synthetic-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
data/: clinical_guidelines.json  clinical_notes.json  loinc_rules.json  synthetic_patients.json
docs/: ci.md
evals/: cdm_agent.py  demo_notes.py  demo_structured.py  mimic_cdm_eval.py  run_cdm.py  test_cdm_agent.py  test_demo_structured.py
evidence_pipeline/: README.md  demo.py  demo_mimic.py
evidence_pipeline/datasets/: medquad.py  mimic.py  mimic_cdm.py
evidence_pipeline/evals/: __init__.py  clinical_decision.py  entity_linking.py  grounding.py  product.py  runner.py  safety.py  stack.py
evidence_pipeline/extraction/: __init__.py  loinc_extractor.py
evidence_pipeline/pipeline/: __init__.py  end_to_end.py
evidence_pipeline/tests/: test_end_to_end.py  test_evals.py  test_grounding.py  test_loinc_extractor.py  test_mimic.py  test_mimic_cdm.py  test_product_evals.py  test_stack.py
scripts/: audit_verify.py  run_agent.py  seed_db.py
src/clinical_agent/: __init__.py  hooks.py  orchestrator.py  subagents.py
src/fhir_mcp/: __init__.py  audit.py  auth.py  confidence.py  deidentify.py  http_server.py  medquad.py  models.py  nlp.py  parse.py  run_server.py  server.py  store.py  trials.py  validator.py
tests/: test_audit_chain.py  test_auth.py  test_confidence.py  test_medquad.py  test_nlp.py  test_orchestrator.py  test_rag.py  test_store.py  test_validator.py
