[project]
name = "clinical-ai-governance-platform"
version = "2.0.0"
description = "Clinical AI Governance Platform: deterministic-gated FHIR agent with RAG, eval harness, and tamper-evident audit."
requires-python = ">=3.10"
dependencies = [
    # MCP server
    "fastmcp>=3.2,<4",
    "pydantic>=2.6,<3",
    # Anthropic SDK (agent + orchestration, Days 4-5)
    "anthropic>=0.40,<1",
    # Agent SDK (orchestration, Day 4)
    "claude-agent-sdk>=0.1",
    # RAG (Day 3)
    "rank-bm25>=0.2,<0.3",
    "chromadb>=0.5",
    # HTTP server (Day 7)
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23,<0.25",
    "httpx>=0.27,<0.29",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
